--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.1",
     "cordova-plugin-whitelist": "^1.3.1",
+    "express": "^4.15.3",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
